# moirai-se

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
arcadiaMergeTool/: __init__.py  __main__.py  cli.py  merger.py
arcadiaMergeTool/helpers/: __init__.py  constants.py  merger.py  types.py
arcadiaMergeTool/merger/: __init__.py  elements.py  extensions.py  libraries.py
arcadiaMergeTool/merger/processors/: __init__.py  _component.py  _component_exchange.py  _component_port.py  _function.py  _function_allocation.py  _function_port.py  _functional_exchange.py  _part.py  _processor.py  capellacommon.py  cs.py  epbs.py  fa.py  helpers.py  la.py  oa.py  pa.py  recordMatch.py  sa.py  se.py
arcadiaMergeTool/merger/processors/abstract/: __init__.py
arcadiaMergeTool/merger/processors/abstract/capability/: __init__.py  realization.py
arcadiaMergeTool/merger/processors/abstract/function/: __init__.py  abstract_capability_involvement.py
arcadiaMergeTool/merger/processors/capability/: __init__.py  allocation.py  exploitation.py  involvement.py  realization.py
arcadiaMergeTool/merger/processors/capability/realization/: __init__.py  involvement.py
arcadiaMergeTool/merger/processors/capellacore/: __init__.py  key_value.py
arcadiaMergeTool/merger/processors/capellacore/enumeration/: __init__.py  property_literal.py  property_type.py  property_value.py
arcadiaMergeTool/merger/processors/catalog/: __init__.py
arcadiaMergeTool/merger/processors/change_event/: __init__.py
arcadiaMergeTool/merger/processors/component/: __init__.py  exchange.py  port.py  realization.py
arcadiaMergeTool/merger/processors/component/exchange/: __init__.py  allocation.py  realization.py
arcadiaMergeTool/merger/processors/component/physical/: __init__.py  link.py  port.py
arcadiaMergeTool/merger/processors/component/port/: __init__.py  allocation.py
arcadiaMergeTool/merger/processors/constraint/: __init__.py
arcadiaMergeTool/merger/processors/context/interface/: realization.py
arcadiaMergeTool/merger/processors/function/: __init__.py  allocation.py  port.py  realization.py
arcadiaMergeTool/merger/processors/functional/: __init__.py  allocation.py  exchange.py  realization.py
arcadiaMergeTool/merger/processors/functional/chain/: __init__.py  capability_involvement.py  involvement.py
arcadiaMergeTool/merger/processors/functional/exchange/: __init__.py  allocation.py  specification.py
arcadiaMergeTool/merger/processors/information/: __init__.py  unit.py
arcadiaMergeTool/merger/processors/information/datatype/: __init__.py  boolean.py  enum.py  numeric.py  string.py
arcadiaMergeTool/merger/processors/information/datavalue/: __init__.py  binary_expression.py  boolean.py  enumeration.py  numeric_reference.py  opaque_expression.py
arcadiaMergeTool/merger/processors/information/exchange_item/: __init__.py  allocation.py  element.py
arcadiaMergeTool/merger/processors/interaction/: __init__.py  message_end.py  scenario.py
arcadiaMergeTool/merger/processors/interaction/abstract/: __init__.py
arcadiaMergeTool/merger/processors/interaction/constraint/: __init__.py  duration.py
arcadiaMergeTool/merger/processors/interface/: __init__.py
arcadiaMergeTool/merger/processors/mission/: __init__.py  involvement.py
arcadiaMergeTool/merger/processors/oa/: __init__.py
arcadiaMergeTool/merger/processors/part/: __init__.py
arcadiaMergeTool/merger/processors/physical/: __init__.py
arcadiaMergeTool/merger/processors/port/: __init__.py  allocation.py  realization.py
arcadiaMergeTool/merger/processors/pvmt/: __init__.py  value_groups.py  value_packages.py
arcadiaMergeTool/merger/processors/requirement/: __init__.py  capella_incoming_relation.py  capella_module.py  capella_types_folder.py  relation_type.py  requirement.py  requirement_type.py
arcadiaMergeTool/merger/processors/sa/: __init__.py  capability_pkg.py  mission_pkg.py  system_component_pkg.py  system_function_pkg.py
arcadiaMergeTool/merger/processors/statemachine/: __init__.py  region.py
arcadiaMergeTool/models/: capellaModel.py  config_model.py  config_project.py  config_project_model.py  merger_config_model.py
arcadiaMergeTool/processors/: __init__.py  epbs.py  la.py  pa.py  sa.py
examples/: example_config.yaml  merger_config.yaml  model-merge.sh
examples/lib/: README.md
examples/lib/baseLib/: baseLib.afm  baseLib.aird  baseLib.capella
examples/lib/emptyModel/: emptyModel.afm  emptyModel.aird  emptyModel.capella
examples/lib/outModel/: outModel.afm  outModel.aird  outModel.capella
examples/test data/Test 1/: README.md  baseLib
examples/test data/Test 1/System1/: System1.aird  System1.capella
examples/test data/Test 1/System2/: System2.aird  System2.capella
examples/test data/Test 1/System3/: System3.aird  System3.capella
examples/test data/Test 2/: README.md
examples/test data/Test 2/System1/: System1.aird  System1.capella
examples/test data/Test 2/System2/: System2.aird  System2.capella
examples/test data/Test 2/System3/: System3.aird  System3.capella
examples/test data/Test 3/: README.md
examples/test data/Test 3/System1/: System1.afm  System1.aird  System1.capella
examples/test data/Test 3/System2/: System2.aird  System2.capella
examples/test data/Test 3/System3/: System3.aird  System3.capella
examples/test data/Test 4/: README.md
examples/test data/Test 4/System1/: System1.aird  System1.capella
examples/test data/Test 4/System2/: System2.aird  System2.capella
examples/test data/Test 4/System3/: System3.afm  System3.aird  System3.capella
examples/test data/Test 5/: README.md
examples/test data/Test 5/System1/: System1.aird  System1.capella
examples/test data/Test 5/System2/: System2.aird  System2.capella
examples/test data/Test 5/System3/: System3.aird  System3.capella
examples/test data/Test 6/: README.md
examples/test data/Test 6/System1/: System1.aird  System1.capella
examples/test data/Test 6/System2/: System2.afm  System2.aird  System2.capella
examples/test data/Test 6/System3/: System3.aird  System3.capella
(+25 files in other folders)
